--- a/html-css-basics/src/style.css
+++ b/html-css-basics/src/style.css
@@ -1,8 +1,63 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+* {
+  color: #f1f1f1;
+}
+
+body {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.main-section {
+  background: #010101;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.header-container {
+  width: 100%;
+  height: 10rem;
+}
+
+.header-flex {
+  display: flex;
+  align-items: center;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  width: 90vw;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  justify-content: space-between;
+}
+
+.hrule-1 {
+  margin-left: 5vw;
+  margin-right: 5vw;
+  width: 90vw;
+  background: #f1f1f1;
+  height: 1.5px;
+}
+
+.menu {
+  gap: 40px;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+  padding-inline-start: 0;
+}
+
+.menu .link-placeholder {
+  transition-duration: 0.5s;
+  font: 400 12px/1 "PP Object Sans",sans-serif;
+  letter-spacing: -.002em;
+}
+
+.menu .link-placeholder:hover {
+  cursor: pointer;
+  color: rgba(241, 241, 241, 0.5);
 }
