--- a/html-css-basics/src/style.css
+++ b/html-css-basics/src/style.css
@@ -11,10 +11,15 @@ body {
 .main-section {
   background: #010101;
   width: 100%;
-  height: 100%;
+  height: 120%;
   position: absolute;
   left: 0;
   top: 0;
+}
+
+header {
+  position: relative;
+  z-index: 2;
 }
 
 .header-container {
@@ -53,11 +58,28 @@ body {
 
 .menu .link-placeholder {
   transition-duration: 0.5s;
-  font: 400 12px/1 "PP Object Sans",sans-serif;
-  letter-spacing: -.002em;
+  font: 400 12px/1 "PP Object Sans", sans-serif;
+  letter-spacing: -0.002em;
 }
 
 .menu .link-placeholder:hover {
   cursor: pointer;
   color: rgba(241, 241, 241, 0.5);
+}
+
+.home {
+  margin-left: 5vw;
+  margin-right: 5vw;
+  width: 90vw;
+}
+
+.bgimg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.bgimg.larger {
+  top: -150px;
 }
