--- a/html-css-basics/src/style.css
+++ b/html-css-basics/src/style.css
@@ -30,18 +30,20 @@ header {
 .header-flex {
   display: flex;
   align-items: center;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  width: 90vw;
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   justify-content: space-between;
 }
 
+.header-flex,
+.home,
 .hrule-1 {
-  margin-left: 5vw;
-  margin-right: 5vw;
-  width: 90vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
+  width: 84vw;
+}
+
+.hrule-1 {
   background: #f1f1f1;
   height: 1.5px;
 }
@@ -67,12 +69,6 @@ header {
   color: rgba(241, 241, 241, 0.5);
 }
 
-.home {
-  margin-left: 5vw;
-  margin-right: 5vw;
-  width: 90vw;
-}
-
 .bgimg {
   position: absolute;
   top: 0;
@@ -83,3 +79,96 @@ header {
 .bgimg.larger {
   top: -150px;
 }
+
+.banner-box {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  margin-top: 150px;
+  position: relative;
+  z-index: 2;
+}
+
+.slogan-main {
+  grid-column: 1 / span 10;
+}
+
+.slogan-secondary {
+  padding-left: 2rem;
+  grid-column: 5 / 13;
+}
+
+.slogan-main,
+.slogan-secondary {
+  font-size: 110px;
+}
+
+.textbox-container {
+  grid-column: 11 / span 2;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+}
+
+.textbox-container .multirow-textbox {
+  font: 400 12px/1 "PP Object Sans", sans-serif;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.border-right-1 {
+  border-right: 1px solid #f1f1f1;
+}
+
+.border-top-1 {
+  border-top: 1px solid #f1f1f1;
+}
+
+.border-bottom-1 {
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.mark {
+  grid-column: 1;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+.spinner-container {
+  grid-column: 2 / span 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lds-circle {
+  display: inline-block;
+  transform: translateZ(1px);
+}
+.lds-circle > div {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  background: #fff;
+  animation: lds-circle 10s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+@keyframes lds-circle {
+  0%, 100% {
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+  }
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(1800deg);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
+  100% {
+    transform: rotateY(3600deg);
+  }
+}
+
