--- a/js-basics/src/style.css
+++ b/js-basics/src/style.css
@@ -9,11 +9,21 @@
 
 .control-container {
   display: flex;
+  flex-direction: column;
+
   align-items: center;
   justify-content: center;
 
-  padding-top: 2rem;
-  padding-bottom: 2em;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5em;
+}
+
+.score-board {
+  display: flex;
+  gap: 2rem;
+  
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .variable-button {
@@ -35,9 +45,6 @@
 
   align-items: center;
   justify-content: center;
-
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .checkboard-row {
