--- a/responsive-page-design/style.scss
+++ b/responsive-page-design/style.scss
@@ -15,6 +15,8 @@
 
 body {
   margin: 0;
+  background-color: #000;
+  color: #fff;
 }
 
 .navbar {
@@ -31,52 +33,199 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  .navbar-links {
-    display: flex;
-    align-items: center;
-
-    &--brand {
-      display: flex;
-      align-items: center;
-      margin-right: 2rem;
-    }
-
-    &--text {
-      text-decoration: none;
-      color: white;
-      font-weight: var(--navbar-item-fontweight-semibold);
-
-      transition: color 0.2s ease;
-
-      &:hover {
-        color: var(--color-theme-blue);
-        font-weight: var(--navbar-item-fontweight-normal);
-      }
-    }
-
-    &--item {
-      padding: var(--navbar-item-padding-vertical)
-        var(--navbar-item-padding-horizontal);
-    }
-  } /* .navbar-links */
 } /* .navbar-inner */
 
-.show-unless-large {
-  display: inherit;
-}
+.navbar-links {
+  display: flex;
+  align-items: center;
 
-.hide-unless-large {
+  &--brand {
+    display: flex;
+    align-items: center;
+    margin-right: 2rem;
+  }
+
+  &--text {
+    text-decoration: none;
+    color: white;
+    font-weight: var(--navbar-item-fontweight-semibold);
+
+    transition: color 0.2s ease;
+
+    &:hover {
+      color: var(--color-theme-blue);
+      font-weight: var(--navbar-item-fontweight-normal);
+    }
+  }
+
+  &--item {
+    padding: var(--navbar-item-padding-vertical)
+      var(--navbar-item-padding-horizontal);
+  }
+
+  &--icon {
+    margin: var(--navbar-item-padding-vertical) 0;
+    margin-right: 0.5rem;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &--github::before {
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
+      no-repeat;
+    content: "";
+    display: flex;
+    height: 24px;
+    width: 24px;
+  }
+
+  &--input {
+    height: 1.75rem;
+    outline: 0;
+    border-width: 0;
+
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.2);
+
+    border-radius: 5px;
+
+    width: 12rem;
+  }
+} /* .navbar-links */
+
+.navbar-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} /* .navbar-search */
+
+.show-unless-large {
   display: none;
 }
 
+.hide-unless-large {
+  display: inherit;
+}
+
+.header-container {
+  height: 691px;
+  background-image: url(//lf-cdn-tos.bytescm.com/obj/static/webinfra/modern-js-website/assets/images/bg-2ea3cd2cbfbb36e34bf70e6de4592b24.png);
+  background-size: cover;
+  background-position: bottom;
+  background-origin: border-box;
+  box-sizing: border-box;
+  overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 2rem;
+  padding-left: 18%;
+
+  .header-logo {
+    margin-top: 60px;
+    width: 540px;
+  }
+
+  h1 {
+    font-size: 4rem;
+    margin: 1rem 0;
+  }
+
+  .header-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+
+    margin-top: 5rem;
+
+    &--btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      text-decoration: none;
+
+      border-radius: 25px;
+
+      height: 40px;
+      width: 120px;
+
+      transition: all 0.5s ease;
+    }
+  }
+}
+
+.btn-t1 {
+  color: rgba(0, 0, 0);
+  background-color: var(--color-theme-blue);
+  border: var(--color-theme-blue) solid 1px;
+
+  &:hover {
+    background-color: #64cfde;
+    border-color: #64cfde;
+  }
+}
+
+.btn-t2 {
+  color: var(--color-theme-blue);
+  background-color: rgba(255, 255, 255, 0.1);
+  border: var(--color-theme-blue) solid 1px;
+
+  &:hover {
+    color: #64cfde;
+    border-color: #64cfde;
+  }
+}
+
 /* tablets */
-@media (min-width: 864px) {
+@media (max-width: 864px) {
   .hide-unless-large {
-    display: inherit;
+    display: none;
   }
 
   .show-unless-large {
-    display: none;
+    display: inherit;
+  }
+
+  .navbar-links--input {
+    width: 9rem;
+  }
+
+  .header-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+/* mobile phones */
+@media (max-width: 600px) {
+  .navbar-links--input {
+    width: 3rem;
+  }
+
+  .header-container {
+    align-items: center;
+
+    background-image: url(//lf-cdn-tos.bytescm.com/obj/static/webinfra/modern-js-website/assets/images/banner-mobile-bg-9d94c86efc8d6cf60c026b28f4536fa6.png);
+    width: 100vw;
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    .header-buttons {
+      margin-top: 2rem;
+      flex-direction: column;
+
+      &--btn {
+        width: 60vw;
+      }
+    }
+
+    .header-logo {
+      width: 70vw;
+    }
   }
 }
