added transparent cards

--- a/responsive-page-design/style.scss
+++ b/responsive-page-design/style.scss
@@ -34,7 +34,9 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-} /* .navbar-inner */
+}
+
+/* .navbar-inner */
 
 .navbar-links {
   display: flex;
@@ -60,8 +62,7 @@ body {
   }
 
   &--item {
-    padding: var(--navbar-item-padding-vertical)
-      var(--navbar-item-padding-horizontal);
+    padding: var(--navbar-item-padding-vertical) var(--navbar-item-padding-horizontal);
   }
 
   &--icon {
@@ -74,8 +75,7 @@ body {
   }
 
   &--github::before {
-    background: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
-      no-repeat;
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E") no-repeat;
     content: "";
     display: flex;
     height: 24px;
@@ -94,13 +94,17 @@ body {
 
     width: 12rem;
   }
-} /* .navbar-links */
+}
+
+/* .navbar-links */
 
 .navbar-search {
   display: flex;
   justify-content: center;
   align-items: center;
-} /* .navbar-search */
+}
+
+/* .navbar-search */
 
 .show-unless-large {
   display: none;
@@ -154,52 +158,6 @@ body {
       width: 120px;
 
       transition: all 0.5s ease;
-    }
-  }
-}
-
-.card-list {
-  display: flex;
-  flex-wrap: wrap;
-  row-gap: 24px;
-  column-gap: 16px;
-
-  margin-top: 25px;
-
-  .wrap-card {
-    background-color: hsla(0, 0%, 100%, 0.1);
-    border: 1px solid hsla(0, 0%, 100%, 0.2);
-
-    height: 135px;
-    max-width: 32%;
-    border-radius: 10px;
-
-    flex: 1 1 32%;
-
-    transition: all 0.2s ease;
-
-    display: flex;
-    align-items: center;
-    gap: 16px;
-
-    padding: 0 2rem;
-    box-sizing: border-box;
-
-    text-decoration: none;
-
-    &:hover {
-      background-color: rgba(78,202,255,.2);
-    }
-
-    &--icon {
-      fill: #fff;
-      flex: 0 0 48px;
-      height: 48px;
-      width: 48px;
-    }
-
-    &--content {
-      color: #fff;
     }
   }
 }
@@ -264,11 +222,9 @@ body {
 
   &:hover {
     cursor: pointer;
-    background: linear-gradient(
-      0,
-      rgba(46, 232, 246, 0.3),
-      rgba(0, 238, 255, 0)
-    );
+    background: linear-gradient(0,
+        rgba(46, 232, 246, 0.3),
+        rgba(0, 238, 255, 0));
   }
 }
 
@@ -277,6 +233,97 @@ body {
   padding-bottom: 1rem;
   text-align: center;
   font-size: 5rem;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 24px;
+  column-gap: 16px;
+
+  .transparent-card {
+    background-color: transparent;
+    border: 1px solid hsla(0, 0%, 100%, 0.2);
+    border-radius: 8px;
+
+    flex: 1 1 24%;
+    max-width: 24%;
+    height: 280px;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+
+    color: #fff;
+    text-decoration: none;
+    padding: 56px 32px;
+
+    transition: all 0.2s ease;
+
+    &:hover {
+      background-color: rgba(78, 202, 255, .2);
+    }
+
+    &--icon {
+      fill: #fff;
+      flex: 0 0 48px;
+      height: 48px;
+      width: 48px;
+    }
+
+    &--content {
+      color: #fff;
+      margin-top: 30px;
+      font-size: 20px;
+    }
+  }
+}
+
+.card-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 24px;
+  column-gap: 16px;
+
+  margin-top: 25px;
+
+  .wrap-card {
+    background-color: hsla(0, 0%, 100%, 0.1);
+    border: 1px solid hsla(0, 0%, 100%, 0.2);
+
+    height: 135px;
+    max-width: 32%;
+    border-radius: 10px;
+
+    flex: 1 1 32%;
+
+    transition: all 0.2s ease;
+
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+    padding: 0 2rem;
+    box-sizing: border-box;
+
+    text-decoration: none;
+
+    &:hover {
+      background-color: rgba(78, 202, 255, .2);
+    }
+
+    &--icon {
+      fill: #fff;
+      flex: 0 0 48px;
+      height: 48px;
+      width: 48px;
+    }
+
+    &--content {
+      color: #fff;
+    }
+  }
 }
 
 .sec-mwa,
@@ -341,6 +388,7 @@ body {
 
 /* tablets */
 @media (max-width: 950px) {
+
   .sec-features,
   .sec-mwa {
     padding: 70px 25px;
@@ -365,6 +413,24 @@ body {
 
   .card-list {
     .wrap-card {
+      flex: 1 1 48%;
+      max-width: 48%;
+    }
+  }
+
+  .card-container {
+    justify-content: space-between;
+    .transparent-card {
+      flex: 1 1 49%;
+      max-width: 49%;
+    }
+  }
+}
+
+/* special */
+@media (max-width: 1280px) {
+  .card-container {
+    .transparent-card {
       flex: 1 1 48%;
       max-width: 48%;
     }
@@ -417,10 +483,12 @@ body {
   .card-list {
     margin-top: 0;
     row-gap: 8px;
+    column-gap: 0;
+
     .wrap-card {
       height: 70px;
-      flex: 1 1 96%;
-      max-width: 96%;
+      flex: 1 1 100%;
+      max-width: 100%;
 
       &--icon {
         flex: 0 0 32px;
@@ -433,6 +501,30 @@ body {
       }
     }
   }
+
+  .card-container {
+    row-gap: 8px;
+    column-gap: 8px;
+
+    .transparent-card {
+      flex: 1 1 48%;
+      max-width: 48%;
+      height: 34vw;
+
+      padding: 32px 4vw;
+
+      &--icon {
+        flex: 0 0 16px;
+        height: 16px;
+        width: 16px;
+      }
+
+      &--content {
+        font-size: 0.8rem;
+        margin-top: 0.5rem;
+      }
+    }
+  }
 }
 
 /* animations */
@@ -440,6 +532,7 @@ body {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(359deg);
   }
