--- a/responsive-page-design/style.scss
+++ b/responsive-page-design/style.scss
@@ -386,6 +386,61 @@ body {
   }
 }
 
+.footer {
+  color: #c9cdd4;
+  background-color: #000;
+  padding: 2rem;
+
+  .footer-container {
+    display:flex;
+    max-width: 1320px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 1rem;
+
+    .footer-links {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+    }
+  }
+}
+
+.footer-list-container {
+  flex: 1 0;
+  max-width: 100%;
+
+  .footer-head {
+    color: #c9cdd4;
+    font-size: 14px;
+    font-weight: bold;
+
+    margin-bottom: 1rem;
+  }
+
+  .footer-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    .footer-list-item {
+      &--link {
+        color: #c9cdd4;
+        font-size: 14px;
+        opacity: 90%;
+        line-height: 2;
+        text-decoration: none;
+
+        &:hover {
+          color: #00b3ff;
+          opacity: 90%;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
 /* tablets */
 @media (max-width: 950px) {
 
