--- a/responsive-page-design/style.scss
+++ b/responsive-page-design/style.scss
@@ -387,12 +387,13 @@ body {
 }
 
 .footer {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
   color: #c9cdd4;
   background-color: #000;
   padding: 2rem;
 
   .footer-container {
-    display:flex;
+    display: flex;
     max-width: 1320px;
     width: 100%;
     margin: 0 auto;
@@ -406,17 +407,33 @@ body {
   }
 }
 
-.footer-list-container {
+.footer-head {
+  color: #c9cdd4;
+  font-size: 14px;
+  font-weight: bold;
+
+  margin-bottom: 1rem;
+}
+
+.footer-grid-container {
   flex: 1 0;
   max-width: 100%;
 
-  .footer-head {
-    color: #c9cdd4;
-    font-size: 14px;
-    font-weight: bold;
+  .footer-grid {
+    width: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-    margin-bottom: 1rem;
+    &--item {
+      margin-bottom: 1rem;
+    }
   }
+}
+
+.footer-list-container {
+  flex: 1 0;
+  max-width: 100%;
 
   .footer-list {
     list-style: none;
@@ -443,6 +460,17 @@ body {
 
 /* tablets */
 @media (max-width: 950px) {
+  .footer {
+    background-color: #212121;
+    padding-left: 0;
+
+    .footer-container {
+      .footer-links {
+        flex-direction: column;
+        row-gap: 3rem;
+      }
+    }
+  }
 
   .sec-features,
   .sec-mwa {
@@ -475,6 +503,7 @@ body {
 
   .card-container {
     justify-content: space-between;
+
     .transparent-card {
       flex: 1 1 49%;
       max-width: 49%;
