--- a/performance-optim/src/common.scss
+++ b/performance-optim/src/common.scss
@@ -1,3 +1,12 @@
+.App {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.placeholder {
+  background: blue;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,4 +18,17 @@ body {
 
 .full-height-container {
   height: 100vh;
+  transition: all 0.5s ease;
+}
+
+.translate-up {
+  transform: translateY(-100vh);
+}
+
+.title-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding-top: 4rem;
 }
