--- a/performance-optim/src/components/styles/Title.scss
+++ b/performance-optim/src/components/styles/Title.scss
@@ -3,11 +3,20 @@
   flex-direction: column;
   align-items: center;
 
-  .main-title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    font-variant: small-caps;
+  .main-title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .main-title {
+      font-size: 2.5rem;
+      font-weight: bold;
+
+      margin: 1rem;
+
+      font-variant: small-caps;
+    }
   }
 
   .main-subtitle {
@@ -15,5 +24,7 @@
     font-size: 1.5rem;
     margin-bottom: 1rem;
     font-variant: small-caps;
+
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 }
