--- a/performance-optim/src/components/styles/RoundedButton.scss
+++ b/performance-optim/src/components/styles/RoundedButton.scss
@@ -5,6 +5,10 @@
 
   transition: all 0.2s ease;
 
+  font-size: 1.2rem;
+  font-family: "Patrick Hand", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+
   &:hover {
     background: #f4f4f5;
     border-radius: 15px;
@@ -14,4 +18,9 @@
   &:active {
     background: #e4e4e7;
   }
+}
+
+.editor-title-button {
+  width: 100px;
+  height: 50px;
 }
