--- a/performance-optim/src/components/styles/OreoButton.scss
+++ b/performance-optim/src/components/styles/OreoButton.scss
@@ -8,9 +8,13 @@
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 8rem;
+  margin-top: 0.5rem;
 
   transition: all 0.2s ease;
+
+  font-family: inherit;
 
   &:hover {
     background: #f4f4f5;
@@ -25,7 +29,7 @@
 }
 
 .oreo-button-text {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
 
   padding-left: 1rem;
