--- a/performance-optim/src/components/styles/RoundedButton.scss
+++ b/performance-optim/src/components/styles/RoundedButton.scss
@@ -24,3 +24,16 @@
   width: 100px;
   height: 50px;
 }
+
+.editor-set-button {
+  height: 65px;
+  width: 400px;
+
+  margin-top: 0.5rem;
+
+  font-family: inherit;
+  font-size: 2rem;
+  font-weight: bold;
+
+  text-align: center;
+}
