--- a/performance-optim/src/common.scss
+++ b/performance-optim/src/common.scss
@@ -9,9 +9,8 @@
 
 body {
   margin: 0;
-  font-family: 'Patrick Hand', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Patrick Hand", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -31,4 +30,36 @@ body {
   justify-content: center;
 
   padding-top: 4rem;
+}
+
+.editor-text-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+
+  .editor-textdisplay {
+    overflow-wrap: break-word;
+
+    line-height: 2.6rem;
+
+    width: 40rem;
+    padding: 0.5rem 1rem;
+
+    background-color: #f4f4f5;
+    border-radius: 50px;
+
+    text-align: center;
+    font-size: 2.5rem;
+  }
+
+  .color-black {
+    color: #000;
+  }
+
+  .color-gray {
+    color: #a1a1aa; 
+  }
 }
