--- a/performance-optim/src/components/styles/OreoButton.scss
+++ b/performance-optim/src/components/styles/OreoButton.scss
@@ -1,6 +1,6 @@
 .oreo-button {
   height: 65px;
-  width: 400px;
+  width: 190px;
 
   border: 2px solid #52525b;
   border-radius: 50px;
@@ -8,8 +8,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: left;
-  padding-left: 8rem;
+  justify-content: center;
   margin-top: 0.5rem;
 
   transition: all 0.2s ease;
