--- a/performance-optim/src/components/styles/RoundedButton.scss
+++ b/performance-optim/src/components/styles/RoundedButton.scss
@@ -20,6 +20,19 @@
   }
 }
 
+.rounded-button.inverted {
+  background: #52525b;
+  color: #fff;
+
+  &:hover {
+    background: #71717a;
+  }
+
+  &:active {
+    background: #3f3f46;
+  }
+}
+
 .editor-title-button {
   width: 100px;
   height: 50px;
