--- a/performance-optim/src/common.scss
+++ b/performance-optim/src/common.scss
@@ -1,6 +1,11 @@
-.App {
+.App,
+.app-height-fixed {
   height: 100vh;
-  overflow: hidden;
+  overflow-y: hidden;
+}
+
+.app-height-extensible {
+  min-height: 100vh;
 }
 
 .placeholder {
@@ -15,8 +20,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.font-fallback {
+  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
 .full-height-container {
   height: 100vh;
+  transition: all 0.5s ease;
+}
+
+.extensible-full-height-container {
+  min-height: 100vh;
   transition: all 0.5s ease;
 }
 
@@ -65,5 +80,81 @@ body {
 
   .color-gray {
     color: #a1a1aa;
+  }
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-col {
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.result-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3rem;
+
+  .result-inner {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 600px;
+    border-radius: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+
+    .result-title {
+      font-size: 2rem;
+      margin: 0.5rem 0 1rem 0;
+    }
+
+    .result-description {
+      font-size: 1.5rem;
+      margin: 0 0 1.5rem 0;
+      font-weight: normal;
+      max-width: 90%;
+      overflow-wrap: break-word;
+    }
+
+    .canvas-container {
+      padding: 0 50px;
+    }
+  }
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #52525b;
+  border-color: #52525b transparent #52525b transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
