--- a/performance-optim/src/components/styles/LargeButton.scss
+++ b/performance-optim/src/components/styles/LargeButton.scss
@@ -11,6 +11,7 @@
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  font-family: inherit;
 
   &:hover {
     box-shadow: 0px 0px 4px rgba($color: #111, $alpha: 0.5);
