--- a/performance-optim/src/common.scss
+++ b/performance-optim/src/common.scss
@@ -94,15 +94,15 @@ body {
   gap: 1rem;
 }
 
-.hidden {
-  display: none;
-}
-
 .result-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 3rem;
+
+  &.hidden {
+    display: none;
+  }
 
   .result-inner {
     padding-top: 2rem;
@@ -131,6 +131,20 @@ body {
     .canvas-container {
       padding: 0 50px;
     }
+  }
+}
+
+.loading-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+
+  &.hidden {
+    display: none;
   }
 }
 
