--- a/performance-optim/src/common.scss
+++ b/performance-optim/src/common.scss
@@ -122,7 +122,7 @@ body {
 
     .result-description {
       font-size: 1.5rem;
-      margin: 0 0 1.5rem 0;
+      margin: 1rem 0 1.5rem 0;
       font-weight: normal;
       max-width: 90%;
       overflow-wrap: break-word;
