--- a/performance-optim/src/common.scss
+++ b/performance-optim/src/common.scss
@@ -121,16 +121,34 @@ body {
     }
 
     .result-description {
-      font-size: 1.5rem;
-      margin: 1rem 0 1.5rem 0;
+      font-size: 2rem;
+      margin: 1rem 0 0rem 0;
       font-weight: normal;
       max-width: 90%;
       overflow-wrap: break-word;
     }
 
     .canvas-container {
-      padding: 0 50px;
+      padding: 2rem 50px;
     }
+  }
+}
+
+.flavor-description {
+  font-size: 1.5rem;
+  margin: 0.5rem 0 0rem 0;
+  font-weight: normal;
+
+  &.desc-strawberry {
+    color: #be185d;
+  }
+
+  &.desc-matcha {
+    color: #15803d;
+  }
+
+  &.desc-chocolate {
+    color: #b45309;
   }
 }
 
