--- a/performance-optim/src/components/styles/RoundedButton.scss
+++ b/performance-optim/src/components/styles/RoundedButton.scss
@@ -1,3 +1,7 @@
+.vanilla,
+.strawberry,
+.chocolate,
+.matcha,
 .rounded-button {
   border-radius: 50px;
   border: 2px solid #52525b;
@@ -20,6 +24,103 @@
   }
 }
 
+.vanilla {
+  &.selected {
+    color: #fff;
+    background: #52525b;
+    border-radius: 15px;
+  }
+
+  &.selected:hover {
+    border-radius: 50px;
+  }
+
+  &.selected:active {
+    background: #3f3f46;
+  }
+}
+
+.matcha {
+  color: #15803d;
+  border: 2px solid #16a34a;
+
+  &:hover {
+    background: #dcfce7;
+  }
+
+  &:active {
+    background: #bbf7d0;
+  }
+
+  &.selected {
+    color: #fff;
+    background: #16a34a;
+    border-radius: 15px;
+  }
+
+  &.selected:hover {
+    border-radius: 50px;
+  }
+
+  &.selected:active {
+    background: #15803d;
+  }
+}
+
+.strawberry {
+  color: #be185d;
+  border: 2px solid #db2777;
+
+  &:hover {
+    background: #fce7f3;
+  }
+
+  &:active {
+    background: #fbcfe8;
+  }
+
+  &.selected {
+    color: #fff;
+    background: #db2777;
+    border-radius: 15px;
+  }
+
+  &.selected:hover {
+    border-radius: 50px;
+  }
+
+  &.selected:active {
+    background: #be185d;
+  }
+}
+
+.chocolate {
+  color: #b45309;
+  border: 2px solid #d97706;
+
+  &:hover {
+    background: #fef3c7;
+  }
+
+  &:active {
+    background: #fde68a;
+  }
+
+  &.selected {
+    color: #fff;
+    background: #d97706;
+    border-radius: 15px;
+  }
+
+  &.selected:hover {
+    border-radius: 50px;
+  }
+
+  &.selected:active {
+    background: #b45309;
+  }
+}
+
 .rounded-button.inverted {
   background: #52525b;
   color: #fff;
@@ -39,7 +140,8 @@
 }
 
 .editor-set-button,
-.editor-set-button-half {
+.editor-set-button-half,
+.editor-set-button-quarter {
   margin-top: 0.5rem;
 
   font-family: inherit;
@@ -57,6 +159,12 @@
 .editor-set-button-half {
   height: 65px;
   width: 190px;
+}
+
+.editor-set-button-quarter {
+  font-size: 1rem;
+  height: 45px;
+  width: 90px;
 }
 
 .editor-set-button-row {
