--- a/performance-optim/src/components/styles/EditorTitle.scss
+++ b/performance-optim/src/components/styles/EditorTitle.scss
@@ -6,7 +6,15 @@
 }
 
 .editor-title {
-  margin: 3rem 0;
+  margin: 0;
+  padding: 3rem 0;
   font-size: 2.5rem;
   font-weight: bold;
+}
+
+@media (max-width: 748px) {
+  .editor-title {
+    padding: 1rem 0;
+    font-size: 2rem;
+  }
 }
