--- a/final-project-game/src/styles/main.css
+++ b/final-project-game/src/styles/main.css
@@ -10,3 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.font-smallcaps {
+  font-variant: small-caps;
+}
