--- a/final-project-game/src/styles/HoverGlowButton.css
+++ b/final-project-game/src/styles/HoverGlowButton.css
@@ -18,6 +18,10 @@
   text-shadow: 0 0 0px #a1a1aa;
 }
 
+.link-active {
+  text-decoration: underline;
+}
+
 @keyframes glow {
   0% {
     text-shadow: 0 0 2px #fff, 0 0 5px #f4f4f5;
