Updated game pause

--- a/final-project-game/src/styles/HoverGlowButton.css
+++ b/final-project-game/src/styles/HoverGlowButton.css
@@ -5,6 +5,7 @@
   padding: 5px 10px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  text-align: center;
 }
 
 .hover-glow-button:hover {
