--- a/final-project-game/src/styles/main.css
+++ b/final-project-game/src/styles/main.css
@@ -26,3 +26,18 @@ body {
 .game-canvas {
   border: 1px #e2e8f0 solid;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.max-h-list {
+  max-height: 64vh;
+}
